fixed overflow index

--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
-   body {
-       background-color: #667788;
-   }
-   main{
-           display: flex;
-           justify-content: center;
-           width: 80%;
-           height: 500px;
-           margin: auto;
-           margin-top: 100px;
-           padding: 7px;
-   }
-   #term{
-     width: 80%;
-     height: 500px;
-     margin: auto;
-     background-color: rgb(54, 54, 54);
-     color: white;
-     padding: 7px;
-     font-family: 'Courier Prime',
-     monospace;
-     font-size: 2rem;
-     border: rgb(95, 95, 95) solid 5px;
-   }
-   #user{
-       color: rgb(39, 218, 39);
-   }
-   .link{
-       text-decoration: underline;
-       color: white;
-      margin: 5px;
-   }
+body {
+  background-color: #667788;
+}
+main {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 100px;
+  padding: 7px;
+}
+#term {
+  /* width: 80%; */
+  /* height: 500px; */
+  width: min(85vw, 700px);
+  height: 50vh;
+  max-height: max(85%, 85vh);
+  margin: auto;
+  background-color: rgb(54, 54, 54);
+  color: white;
+  padding: 7px;
+  font-family: "Courier Prime", monospace;
+  font-size: clamp(1.5rem, 2.5vw, 4rem);
+  border: rgb(95, 95, 95) solid 5px;
+  overflow: auto;
+  aspect-ratio: auto 4 / 3;
+}
+#user {
+  color: rgb(39, 218, 39);
+}
+.link {
+  text-decoration: underline;
+  color: white;
+  margin: 5px;
+}
